--- a/feature-repositories/build.gradle
+++ b/feature-repositories/build.gradle
@@ -49,7 +49,10 @@ dependencies {
     implementation(project(':common'))
 
     implementation "com.google.android.material:material"
+
     implementation "androidx.fragment:fragment-ktx"
+    implementation "androidx.navigation:navigation-fragment-ktx"
+    implementation "androidx.navigation:navigation-ui-ktx"
 
     implementation "com.google.dagger:hilt-android"
     kapt "com.google.dagger:hilt-compiler"
