--- a/platform/build.gradle
+++ b/platform/build.gradle
@@ -6,7 +6,14 @@ dependencies {
     constraints {
 
         api "com.google.android.material:material:1.5.0"
+
         api "androidx.fragment:fragment-ktx:1.4.0"
+        api "androidx.navigation:navigation-fragment-ktx:2.3.5"
+        api "androidx.navigation:navigation-ui-ktx:2.3.5"
+
+        api "androidx.room:room-runtime:2.4.1"
+        api "androidx.room:room-rxjava3:2.4.1"
+        api "androidx.room:room-compiler:2.4.1"
 
         api "com.google.dagger:hilt-android:2.40.5"
         api "com.google.dagger:hilt-compiler:2.40.5"
@@ -24,11 +31,7 @@ dependencies {
         api "com.squareup.moshi:moshi-kotlin:1.12.0"
 
         api "com.squareup.picasso:picasso:2.71828"
-
-        api "androidx.room:room-runtime:2.4.1"
-        api "androidx.room:room-rxjava3:2.4.1"
-        api "androidx.room:room-compiler:2.4.1"
-
+        
         api "junit:junit:4.13.2"
         api "androidx.test:core:1.4.0"
         api "io.mockk:mockk:1.12.0"
